# toolnexus

./: .gitignore  CHANGELOG.md  CLAUDE.md  PUBLISHING.md  README.md  SPEC.md  THIRD-PARTY-LICENSES.md
benchmarks/: .gitignore  README.md  mastra-comparison.md  mcp_server.py  mock_llm.py  results.json  run_adk.py  run_all.py  run_crewai.py  run_langchainjs.mjs  run_langgraph.py  run_mastra.mjs  run_openai_agents.py  run_pydantic_ai.py  run_toolnexus.py  run_toolnexus_elixir.exs  run_toolnexus_js.mjs  run_vercel_ai.mjs
conformance/: README.md  check_options_parity.py  options_manifest.json
csharp/: README.md  Toolnexus.slnx
docs/: comparison-benchmarks.md  performance-benchmarks.md  (+1 more)
python/: README.md  pyproject.toml
python/examples/: a2a_agents.py  advanced.py  agent.py  basic.py  hooks.py  memory.py  openrouter_deepseek.py  openrouter_test.py  persona.py  streaming.py
python/spike/: agents.py  demo.py  demo_ux.py  runtime.py
python/src/toolnexus/: __init__.py  a2a.py  adapters.py  builtin.py  client.py  http.py  mcp_serve.py  mcp_source.py  native.py  serve.py  skill.py  toolkit.py  types.py
python/src/toolnexus/agents/: __init__.py  compaction.py  runtime.py  surface.py
python/tests/: _agent_mocks.py  _stdio_mcp_server.py  test_a2a.py  test_agents_home.py  test_agents_runtime.py  test_agents_surface.py  test_client_cancel_incomplete.py  test_client_resilience.py  test_compaction.py  test_conversation_memory.py  test_mcp_serve.py  test_observability.py  test_pending.py  test_rag_consumer.py  test_serve.py  test_stdio_outbound.py  test_unit.py
(+571 files in other folders)
