[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolnexus"
version = "0.1.1"
description = "Provider-agnostic toolkit: dynamic MCP servers + agent skills for any LLM."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Muthukumaran Navaneethakrishnan", email = "muthuishere@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
test = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/toolnexus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
